--- a/03.Calculator/계산기 앱.md
+++ b/03.Calculator/계산기 앱.md
@@ -38,6 +38,7 @@ FastCampus 의 [30개 프로젝트로 배우는 iOS 앱 개발 with Swift 초격
 - `+/-` 기능 구현 (부호 변환)
 - `%` 기능 구현 (퍼센트 연산) ✅ (*TEST 추가적으로 필요*)
 - `UI` 변환 ✅
+- 버튼 클릭시 버튼 색상 변경
 
 
 <br>
