--- a/03.Calculator/계산기 앱.md
+++ b/03.Calculator/계산기 앱.md
@@ -1,29 +1,54 @@
 # 계산기 앱 🧮
 
+<br>
+
 FastCampus 의 [30개 프로젝트로 배우는 iOS 앱 개발 with Swift 초격차 패키지 Online](https://fastcampus.co.kr/dev_online_iosappfinal) 강의를 보고 실습, 추가 구현한 내용입니다. 
 
+<br>
 ---
 
-
-숫자를 입력해 값을 계산하는 앱이다.   
-최대한 아이폰의 계산기 앱과 동일하게 하려고 구현했다.
+<Br>
+아이폰의 계산기 앱과 동일하게 하려고 구현했다.
 
 <br>
 
 <p align= center><img src=https://user-images.githubusercontent.com/63290629/149080592-a043d132-bee3-4d51-b4d1-ff8edfa1806f.png width="50%" height="50%"/> &nbsp;&nbsp;&nbsp;&nbsp; <img src=https://user-images.githubusercontent.com/63290629/149080193-c9f0671f-4784-449a-9e28-8e5d4e948235.png width="40%" height="40%"/></p>
 
-### **💙 구현**
+<br>
+
+## **💙 구현**
+
+<br>
+
 - `@IBDesignable`, `@IBInspectable`을 이용해 동그란 버튼을 만들 수 있다.   
   → 🚨 위의 이미지와 같이 완전히 둥근 모양은 아니고 살짝 각져있다. *해결하기*  
   → (⏰ 2022.01.12) 버튼이 정사각형이 아니었다. (87, 88.5) 이런 식었다는 것을 발견하고 수정하기 위해 찾아보다가 vertical stackview와 horizontal stackview의 spacing이 다른 것을 확인하고 동일하게 바꿔주었더니 버튼이 가로 세로 길이가 동일한 정사각형이 되었다. 그러나 여전히 미묘하게 각져있다. *해결하기😱*
 
-- `@IBDesignable` 오류로 스토리보드 상으로 보이지 않는다.
+- `@IBDesignable` 오류로 스토리보드 상으로 RoundButton이 보이지 않을 때도 있다. 
 
 - `StackView`를 사용해 버튼들을 묶어주었다. [AutoLayout]
 
+- (코드 수정) MVC 디자인 패턴으로 변경
+
+
 <br>
 
-### **💙 기능**
+## **💙 MVC(Model - View - Controller) 디자인 패턴으로 변경**
+  
+
+<br>
+
+**Model = CalculatorBrain.swift** , 계산기의 계산하는 코드 구현
+
+**View = Storyboard** 에 UI 객체들로 구현
+
+**Controller = ViewController.swift** , UI에 따른 실행을 코드 구현. (Model-View 연결)
+
+<br>
+
+## **💙 기능**
+
+<br>
 
 - 숫자판을 누르면 원하는 값을 입력할 수 있다.
 - `+, -, *, /` 를 누르면 해당 연산자로 값을 계산 할 수 있다.
@@ -33,12 +58,13 @@ FastCampus 의 [30개 프로젝트로 배우는 iOS 앱 개발 with Swift 초격
 
 <br>
 
-### **💙 강의 외의 추가적인 구현**
-- `AC ↔ C` 변환
+## **💙 강의 외의 추가적인 구현**
+
+<br>
+
 - `+/-` 기능 구현 (부호 변환)
-- `%` 기능 구현 (퍼센트 연산) ✅ (*TEST 추가적으로 필요*)
-- `UI` 변환 ✅
-- 버튼 클릭시 버튼 색상 변경
+- `%` 기능 구현 (퍼센트 연산)
+- MVC 디자인 패턴으로 변경 (+ 리팩토링)
 
 
 <br>
