--- a/03.Calculator/계산기 앱.md
+++ b/03.Calculator/계산기 앱.md
@@ -5,10 +5,8 @@
 FastCampus 의 [30개 프로젝트로 배우는 iOS 앱 개발 with Swift 초격차 패키지 Online](https://fastcampus.co.kr/dev_online_iosappfinal) 강의를 보고 실습, 추가 구현한 내용입니다. 
 
 <br>
----
 
-<Br>
-아이폰의 계산기 앱과 동일하게 하려고 구현했다.
+---
 
 <br>
 
@@ -28,7 +26,7 @@ FastCampus 의 [30개 프로젝트로 배우는 iOS 앱 개발 with Swift 초격
 
 - `StackView`를 사용해 버튼들을 묶어주었다. [AutoLayout]
 
-- (코드 수정) MVC 디자인 패턴으로 변경
+- MVC 디자인 패턴으로 변경 (2022.05.15 수정)
 
 
 <br>
